--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import "./partials/mixins";
 @import "./partials/variables";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
 
 
@@ -13,6 +14,7 @@
 #root {
     width: 100%;
     height: 100%;
+    @include center-col;
 }
 
 body {
@@ -26,6 +28,7 @@ body {
 
     .navbar {
         position: absolute;
+        top: 0;
         width: 100%;
         @include center-row;
         justify-content: space-between;
@@ -142,54 +145,99 @@ body {
             justify-content: space-evenly;
         }
 
-        .landing-page-img {
+        .inner-container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: 1fr;
+            place-content: center;
+            justify-items: center;
+            align-items: flex-start;            
             width: 100%;
-            max-width: 30rem;
-            height: auto;
             position: absolute;
-            left: clamp(10%, 10%, 5%);
             top: 25%;
 
             @media screen and (max-width: 1350px) {
-                position: relative;
-                top: 0 !important;
-                left: 0 !important;
-            }
+                grid-template-columns: 1fr;
+                grid-template-rows: repeat(2, 1fr);
+                }
 
-            @media screen and (max-width: 600px) {
-                top: 3rem !important;
-                max-width: 19rem;
-            }
-        }
+                .img-container {
+                    @include center-row;
+                    width: 100%;
 
-        .landing-page-text {
-            min-width: 30%;
-            max-width: 40%;
-            padding-right: 10rem;
-            padding-bottom: 11rem;
-            z-index: 5;
+                    .landing-page-img {
+                        width: 100%;
+                        max-width: 30rem;
+                        height: auto;
+                        margin-left: 6rem;
+                        position: relative;
 
-            @media screen and (max-width: 1350px) {
-                width: 100%;
-                padding: 0;
-            }
-
-            h1 {
+                        // position: absolute;
+                        // left: clamp(10%, 10%, 5%);
+                        // top: 25%;
+            
+                        @media screen and (max-width: 1350px) {
+                            top: 0 !important;
+                            left: 0 !important;
+                            margin-left: 0;
+                        }
+            
+                        @media screen and (max-width: 600px) {
+                            top: 3rem !important;
+                            max-width: 19rem;
+                        }
+                    }
+                }
+    
+            .landing-page-text {
+                // min-width: 30%;
+                // max-width: 40%;
+                padding-right: 10rem;
+                padding-bottom: 1rem;
                 z-index: 5;
-                font-size: clamp(1ch, 5ch, 6ch);
-                font-variant: small-caps;
-                font-weight: 700;
-                color: $main-bg-left;
-
-                @media screen and (max-width: 600px) {
+                height: 100%;
+                @include center-col;
+                justify-content: space-between;
+    
+                @media screen and (max-width: 1350px) {
+                    width: 100%;
+                    padding: 0;
+                }
+    
+                h1 {
+                    z-index: 5;
+                    font-size: clamp(1.5ch, 5ch, 6ch);
+                    font-variant: small-caps;
+                    font-weight: 700;
+                    color: $main-bg-left;
                     text-align: center;
+                    font-family: 'Abril Fatface', cursive;
+                    width: 50%;
+    
+                    @media screen and (max-width: 600px) {
+                        text-align: center;
+                    }
+                }
+
+                a {
+                    text-decoration: none;
+                    font-size: 1.2rem;
+                    color: white;
+                    font-weight: 100;
+                    background-color: $main-bg-left;
+                    padding: 0.4rem 1.2rem;
+                    @include btn-hover(white, $main-bg-left) {
+                        border: 1px solid $main-bg-left;
+                    }
+                }
+    
+                @media screen and (max-width: 600px) {
+                    max-width: 100%;
                 }
             }
-
-            @media screen and (max-width: 600px) {
-                max-width: 100%;
-            }
         }
+
+
     }
 }
 
