--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@
 @import "./partials/overlay";
 @import "./partials/landingPage";
 @import "./partials/contentPage";
+@import "./partials/articlesPage";
 
 /*
 .
