added a footer and some text animations

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,8 @@
 @import "./partials/landingPage";
 @import "./partials/contentPage";
 @import "./partials/articlesPage";
+@import "./partials/footerPage";
+
 
 /*
 .
