--- a/src/partials/_footerPage.scss
+++ b/src/partials/_footerPage.scss
@@ -7,7 +7,7 @@ body {
             margin-top: $page-spacing;
             background-color: black;
             width: 100%;
-            height: 60vh;
+            min-height: 60vh;
             padding: $page-spacing;
             @include center-col;
             color: white;
@@ -18,6 +18,7 @@ body {
                 // @include center-row;
                 display: flex;
                 padding: 1.5rem;
+                
 
                 div {
                     font-size: 3rem;
@@ -66,6 +67,53 @@ body {
                 }
                 100% {
                     transform: translateX(-200%);
+                }
+            }
+            .footer-list-outer {
+                @include center-col;
+                width: 100%;
+                margin: 5rem 0;
+                .footer-list-inner {
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                    flex-wrap: wrap;
+                    gap: 2rem;
+                    ul {
+                        list-style: none;
+                        @include center-col;
+                        align-items: flex-start;
+                        padding: 1.5rem;
+    
+                        h5 {
+                            font-size: 1.2rem;
+                            margin-bottom: 1rem;
+                        }
+                    }
+                }
+            }
+
+
+            .disclaimer {
+                display: grid;
+                grid-template-columns: 1fr 2fr;
+                grid-template-rows: 1fr;
+                div {
+                    color: gray;
+                }
+
+                aside {
+                    position: relative;
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        bottom: 50%;
+                        left: 50%;
+                        width: 60%;
+                        border-top: 3px solid gray;
+                        transform: translateX(-50%);
+                        border-radius: 4px;
+                    }
                 }
             }
         }
