--- a/src/partials/_articlesPage.scss
+++ b/src/partials/_articlesPage.scss
@@ -6,17 +6,25 @@ body {
         .articles {
             width: 100%;
             padding: 0 $page-spacing;
+
             .article-inner-container {
                 background-color: white;
                 width: 100%;
                 @include center-row;
                 gap: 1.2rem;
-
+                
                 @media screen and (max-width: 1350px) {
                     flex-direction: column;
                 }
+
+                
                 article {
                     padding: $page-spacing 0;
+
+                    @media screen and (max-width: 600px) {
+                        padding: calc(#{$page-spacing} * 0.5)
+                    }
+
                     .article-img {
                         position: relative;
                         max-width: 390px;
@@ -25,6 +33,11 @@ body {
                         img {
                             max-width: 390px;
                             max-height: 300px;
+
+                            @media screen and (max-width: 600px) {
+                                max-width: 300px;
+                                max-height: 250px;
+                            }
                         }
                         .img-overlay {
                             width: 390px;
@@ -42,7 +55,14 @@ body {
                     }
                 }
             }
-            
+            @media screen and (max-width: 800px) {
+                padding: 1.3rem;
+            }
+
+            @media screen and (max-width: 600px) {
+                padding: 1.8rem 0 !important;
+            }
+
         }
     }
 }
