--- a/src/partials/_landingPage.scss
+++ b/src/partials/_landingPage.scss
@@ -10,9 +10,13 @@ body {
             @include center-col;
             align-items: flex-end;
     
-            @media screen and (max-width: 1600px) {
+            @media screen and (max-width: 1400px) {
                 align-items: center;
                 justify-content: space-evenly;
+            }
+
+            @media screen and (max-height: 1090px) {
+                margin: 8rem 0;
             }
     
             .inner-container {
@@ -26,13 +30,15 @@ body {
                 // position: absolute;
                 // top: 25%;
     
-                @media screen and (max-width: 1600px) {
+                @media screen and (max-width: 1400px) {
                     grid-template-columns: 1fr;
                     grid-template-rows: repeat(2, 1fr);
                     gap: 5rem
                 }
-                @media screen and (max-width: 800px) {
-                    gap: 1rem;
+                @media screen and (max-width: 1400px) {
+                    grid-template-columns: 1fr;
+                    grid-template-rows: repeat(2, 1fr);
+                    gap: 5rem
                 }
     
                     .img-container {
@@ -50,7 +56,7 @@ body {
                             // left: clamp(10%, 10%, 5%);
                             // top: 25%;
                 
-                            @media screen and (max-width: 1600px) {
+                            @media screen and (max-width: 1400px) {
                                 top: 0 !important;
                                 left: 0 !important;
                                 margin-left: 0;
@@ -78,7 +84,7 @@ body {
                     @include center-col;
                     justify-content: space-between;
         
-                    @media screen and (max-width: 1600px) {
+                    @media screen and (max-width: 1400px) {
                         width: 100%;
                         padding: 0;
                     }
